<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:gravity="center">

            <EditText
                android:id="@+id/editTextHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/height" />

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editTextWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/weight" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/textViewError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:textSize="24sp"
            android:visibility="invisible" />
    </LinearLayout>

    <TextView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authors"
        android:textSize="18sp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>